# SudokuDetectorFlutter

./: NumberModel.py  NumberModel_TFLite.py  README.md  SudokuImageProcessing.ipynb  native_opencv.dart  number_classifier.ipynb  python_helper_functions.py  sudoku_dataset_warped_filter.py  sudoku_number_classifier.ipynb
flutter_sudoku_app/: README.md  pubspec.yaml
flutter_sudoku_app/android/app/: build.gradle
flutter_sudoku_app/android/app/src/main/: AndroidManifest.xml
flutter_sudoku_app/android/app/src/main/kotlin/com/example/flutter_sudoku_app/: MainActivity.kt
flutter_sudoku_app/ios/Runner/: Info.plist
flutter_sudoku_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_sudoku_app/lib/: background_animation.dart  camera_state.dart  main.dart  sudoku_solver.dart  theme.dart
flutter_sudoku_app/lib/detector/: sudoku_detector.dart
flutter_sudoku_app/lib/services/: ComputerVisionState.dart  NativeOpenCVState.dart  TFLiteInterpreterState.dart  TFLiteNeuralNetwork.dart  loading.dart
flutter_sudoku_app/test/: widget_test.dart
native_opencv/: pubspec.yaml
native_opencv/android/: CMakeLists.txt  build.gradle
native_opencv/android/src/main/: AndroidManifest.xml
native_opencv/android/src/main/kotlin/com/nativeopencvjorgejc2/native_opencv/: NativeOpencvPlugin.kt
native_opencv/android/src/test/kotlin/com/nativeopencvjorgejc2/native_opencv/: NativeOpencvPluginTest.kt
native_opencv/example/: pubspec.yaml
native_opencv/example/android/app/: build.gradle  local.properties
native_opencv/example/android/app/src/main/kotlin/com/nativeopencvjorgejc2/native_opencv_example/: MainActivity.kt
native_opencv/example/ios/Runner.xcodeproj/: project.pbxproj
native_opencv/ios/Classes/: native_opencv.cpp
native_opencv/ios/Classes/SudokuDetector/: SudokuDetector.cpp  SudokuDetector.h  helperFunctions.h
native_opencv/lib/: native_opencv.dart
python_scripts/: .gitignore  NumberModel.py  NumberModel_ReLUNN.py  NumberModel_TFLite.py  NumberModel_v0.py  SudokuImageProcessing.ipynb  arguments.py  generate_docs.py  hough_transform.ipynb  hydra_types.py  process_sudoku_dataset.py  python_helper_functions.py  sudoku_dataset_warped_filter.py  sudoku_dataset_warped_filter_improved.py  sudoku_number_classifier.ipynb
python_scripts/config/: config_schema.py  default_config.yaml  original_config.yaml
python_scripts/config/architecture/: large_architecture.yaml  original_architecture.yaml
python_scripts/config/hydra/help/: all_parameters_documentation.yaml
python_scripts/src/: __init__.py
python_scripts/src/architectures/: __init__.py  blocks.py  large_architecture.py  original_architecture.py  parser.py
python_scripts/src/facades/: __init__.py  hydra_types.py
python_scripts/src/training/: __init__.py  exporter.py  trainer.py  training_utils.py
python_scripts/tools/: generate_docs.py
sudoku_solver_c_implementation/: .gitignore  CMakeLists.txt  README.md
sudoku_solver_c_implementation/example/: CMakeLists.txt  detectSudokuExample.cpp  displayImageExample.cpp  main.cpp
sudoku_solver_c_implementation/include/: CMakeLists.txt  SudokuDetector.h
sudoku_solver_c_implementation/src/: CMakeLists.txt  LibraryCode.cpp  SudokuDetector.cpp
sudoku_solver_c_implementation/tests/: CMakeLists.txt  merge_sort_test.cpp  test_one.cpp
